<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".Reminders">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"

        android:layout_marginBottom="6dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="142dp"

        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_sticky_note_2_24"
        android:visibility="invisible"

        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="320dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="HardcodedText,VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="206dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
        tools:ignore="HardcodedText,VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="79dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:ignore="HardcodedText,VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/remindersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginEnd="9dp"
        android:layout_marginBottom="272dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_agenda"
        android:visibility="invisible"
        tools:ignore="HardcodedText,VectorDrawableCompat" />

    <ListView
        android:id="@+id/reminlist"
        android:layout_width="401dp"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        android:divider="@color/dark_grey"
        android:dividerHeight="2px"
        />

    <Button
        android:id="@+id/buttonsave"
        android:layout_width="207dp"
        android:layout_height="71dp"
        android:layout_below="@id/reminlist"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="175dp"
        android:backgroundTint="#01C6B4"

        android:text="Create a Reminder"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:backgroundTint="#01C6B4" />

    <Button
        android:id="@+id/buttonedit"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@id/buttonsave"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="220dp"
        android:backgroundTint="#01C6B4"

        android:text="Edit"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:backgroundTint="#01C6B4" />
    <Button
        android:id="@+id/buttondelete"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@id/buttonsave"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="#01C6B4"
        android:text="Delete"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:backgroundTint="#01C6B4" />

</RelativeLayout>