...
        android:layout_marginLeft="22dp"
        android:layout_marginBottom="10dp"
        android:background="#01C6B4"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="57dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="110dp"
...
